<resources>
    <string name="facebook_app_id">387985278434317</string>
    <string name="fb_login_protocol_scheme">fb387985278434317</string>
    <string name="invite_your_friend">Investing has never been easier! I am using the Tarrakki app to invest, You should try it out. Towards Prosperity!</string>
    <string name="mutual_funds">Mutual Funds</string>
    <string name="home">Home</string>
    <string name="plan">Plan</string>
    <string name="invest">Invest</string>
    <string name="learn">Learn</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="internet_connection">Internet connection not available</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <string name="why_tarrakki">Why Tarrakki ?</string>
    <string name="already_invested_in_mf">Already invested in Mutual Funds?</string>
    <string name="add_your_existing">Add your existing investments here to track and manage your investments</string>
    <string name="why_rural_invest">Why Rural Invest ?</string>
    <string name="import_funds">Import Funds</string>
    <string name="dummy">\u20B93,24666666666666888888888</string>
    <string name="dummy1">\u20B95,000,00</string>
    <string name="dummy3">\u20B91,583</string>
    <string name="rs_symbol">\u20B9</string>
    <string name="view_portfolio">View Portfolio</string>
    <string name="total_investment">Total Investment</string>
    <string name="cart">Cart</string>
    <string name="financial_goals_assist">
        Financial goals assist you in making small, regular investments towards fulfilling your dreams.
        Tarrakki Goal Setting helps you make time-bound, risk-evaluated investments aimed at giving you the returns you need to achieve your goal.
        Select a goal and get started.
    </string>
    <string name="set_a_goal">Set a Goal</string>
    <string name="our_recommended">Our Recommendation</string>
    <string name="our_recommended_title">Our Recommended Fund for this Strategy</string>
    <string name="your_investment_plan">Your Investment Plan</string>
    <string name="monthly_investment">Monthly Investment</string>
    <string name="our_recommended_info">To own your dream home, your goal is to reach about <font color='#4EB95D'><u>\u20B93.95 Lakh.</u></font> This means investing <font color='#4EB95D'><u>\u20B92.85 Lakh</u></font> over the next <font color='#4EB95D'><u>5</u></font> years, including a one-time lumpsum of <font color='#4EB95D'><u>\u20B910,000</u></font> up front.</string>
    <string name="funds_to_achieve_your_goal">Funds to Achieve Your Goal</string>
    <string name="get_this_goal">Get This Goal</string>
    <string name="current">Current</string>
    <string name="since_launch_sl">Since Launch (SL)</string>
    <string name="_1y_return">1Y Return</string>
    <string name="three_y_fund">3Y Fund:</string>
    <string name="three_y_fd">Fixed Deposit:</string>
    <string name="find_your_mutual_fund">Find Your Mutual Fund</string>
    <string-array name="risk_level">
        <item>LOW</item>
        <item>MODERATELY LOW</item>
        <item>MODERATE</item>
        <item>MODERATELY HIGH</item>
        <item>HIGH</item>
    </string-array>
    <string name="sort_by_returns">Sort by returns</string>
    <string name="investment_type">Investment Type</string>
    <string name="all">All</string>
    <string name="growth">Growth</string>
    <string name="dividend_payout">Dividend Payout</string>
    <string name="why_tarrakki_info">
        Tarrakki helps you invest your hard earned money in mutual funds that best fit your income, age, and risk appetite.
        \n\nWatch your money grow beyond the rate of inflation.
        \n\nAchieve life goals and financial milestones faster.
        \n\n- Paperless Investing
        \n\n- Direct Plans (No Agent Commissions)
    </string>
    <string name="why_rural_invest_info">
        Rural invest is an initiative by Tarrakki.com along with 4 promising young entrepreneurs - Satyam, Naman, Raghav &amp; Madhav.
        \n\n
        Today, India has the world’s largest rural population, which is yet to be tapped to its
        fullest potential. There exists a pertinent lack of financial planning in rural Indian
        households. According to a recent survey conducted by SEBI, less than 1% of rural
        people invest in financial instruments. Out of 13,697 respondents, only 35 have some
        formal financial investments, which is a mere 0.23%. Thus, financial literacy is a big
        challenge for the rural population in India; however, it also plays a crucial role in the
        economy’s prospects.
        \n\n
        We intend to inculcate a habit of saving in our country’s rural population so that they
        can make financially informed goal-oriented decisions towards securing a better
        future for themselves &amp; their family. It is because the financial situation and behavior
        of rural households not only affects their livelihood; it also has a significant influence
        on the stability of the financial system and future economic growth of the country.
        \n\n
        However, the behavior of rural household investors regarding saving &amp; investment
        behavior is inconsistent and unpredictable because of the lack of financial education,
        impoverished lifestyle, unstable occupation, and fluctuating income. They are not
        able to save their money due to these irregularities, and even if some households
        save, it is usually informal savings in the form of cash, which might pose liquidity
        challenges during unexpected situations like Demonetization or COVID-19. Lack of
        awareness about ways &amp; benefits of investing in financial assets leads to an increase
        in informal savings &amp; investments, which ultimately does not contribute to the capital
        formation of the country.
        \n\n
        Thus, we decided to start Rural Invest, an initiative like Rural Invest which is the
        need of the hour to leverage finance’s power to empower and tap the untapped Indian
        rural market. Rural Invest aims to spread awareness about financial literacy amongst
        rural households &amp; inculcate the habit of saving &amp; investing. Thus, Rural Invest is
        an effective avenue for Rural India for saving, borrowing, investing, and mitigating
        future financial risks, thereby also ensuring access to liquidity in times of distress.
    </string>
    <string name="category">Category</string>
    <string name="sub_category">Sub Category</string>
    <string name="fund_details">Fund Details</string>
    <string name="fund_objective">Fund Objective</string>
    <string name="fund_objective_info">This fund aims to achieve long term capital appreciation, predominantly through investments in equity and equity related instruments of Mid Cap companies.</string>
    <string name="invest_now">Invest Now</string>
    <string name="top_10_holdings">Top 10 holdings</string>
    <string name="key_information">Key Information</string>
    <string name="return_">return</string>
    <string name="returns">Returns</string>
    <string name="returns_sysmbol">Returns(%)</string>
    <string name="calculate_historical_performance">Calculate Historical Performance</string>
    <string name="if_you_had_invested">If you had invested:</string>
    <string name="over_the_last">Over the last:</string>
    <string name="you_would_have_earned">You would have earned:</string>
    <string name="duration">Duration</string>
    <string name="disclaimer_expected_returns">Disclaimer: Expected returns are not guaranteed. The above calculations are based on historical returns. Investments are subject to market risk.</string>
    <string name="last_price">Last Price</string>
    <string name="year_to_date_return">Year-To-Date Return</string>
    <string name="_1_day_change">1 Day Change</string>
    <string name="your_goal">Your Goal</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="numbers_of_years_you_d_like_to_buy_it">Numbers of years you\'d like to buy it</string>
    <string name="current_value_of_your_dream_home">Current value of your dream home</string>
    <string name="years">years</string>
    <string name="down_payment">Home much do they plan to make as down payment?</string>
    <string name="we_recommending_investing">We recommend investing</string>
    <string name="every_month_for_the_next_5_years">every month, for the next <font color='#00CB00'><u>5</u></font> years</string>
    <string name="a_lumpsum_of_10_000_upfront_to_achieve_your_goal">A lumpsum of <font color='#00CB00'><u>\u20B910,000</u></font> upfront, to achieve your goal</string>
    <string name="add_this_goal">Add this goal</string>
    <string name="set_a_custom_investment_amount">Set a custom investment amount</string>
    <string name="why_does_the_inflation_rate_matter">Why does the Inflation Rate matter?</string>
    <string name="the_house_that">
        The house that costs 60 lakhs today, used to cost 10 lakhs, just 20 years ago. How much is it likely to cost in the next 10 years?
        \n\nWhen you make an investment for a future goal, you want your future re-turns to be at par with the going market rates of that time. The inflation rate is calculated based on various fiscal parameters, to ensure that the return on your investment remains relevant in future.
    </string>
    <string name="here_is_a_summary_of_your_goal">Here is a Summary of Your Goal:</string>
    <string name="weightage">Weightage</string>
    <string name="one_time">One-Time</string>
    <string name="monthly">Monthly</string>
    <string name="my_cart">My Cart</string>
    <string name="great_job">Great Job!</string>
    <string name="you_are_almost_there_here_is_a_summary_of_your_order">You are almost there! Here is a summary of your order. Want to invest in more funds? Edit here before investing.</string>
    <string name="add_funds">Add Funds</string>
    <string name="view_detailed_steps">View detailed steps to get CAS</string>
    <string name="visit_cams_websites">Visit CAMS website</string>
    <string name="steps_to_get_cas">Steps to get the Consolidated Account Statement (CAS)</string>
    <string name="enter_details">Enter the details and password as listed below and click on \'Submit\'</string>
    <string name="statement_type">Statement Type</string>
    <string name="detailed">Detailed</string>
    <string name="period">Period</string>
    <string name="specific_period">Specific Period</string>
    <string name="from_date">From Date</string>
    <string name="first_jan">1st Jan, 1990</string>
    <string name="to_date">To Date</string>
    <string name="current_date">Current Date</string>
    <string name="folio_listing">Folio Listing</string>
    <string name="with_zero_balance">With Zero balance folios</string>
    <string name="email">Email</string>
    <string name="pan">PAN</string>
    <string name="passwords">Password</string>
    <string name="once_you_get_email">Once you get the email from \n<b>donotreply@camsonline.com</b></string>
    <string name="forward_email_to">Forward the email to <i>cas@tarrakki.com</i></string>
    <string name="bank_mandate_preview">Bank Mandate Preview</string>
    <string name="please_look_at_the_pre_filled">Please look at the pre-filled Bank Mandate carefully to verify that all the in-formation is correct.\n\nDownload the Bank Mandate and Print.</string>
    <string name="sign_scan_and_upload">Sign, Scan, and Upload.</string>
    <string name="send_nach_mandate_form_email">Send NACH Mandate Form Via Email</string>
    <string name="download_nach_mandate_form">Download NACH Mandate Form</string>
    <string name="instruction">Instruction</string>
</resources>