<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/action_plan"
        android:enabled="true"
        android:icon="@drawable/plan"
        android:title="@string/plan"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/action_invest"
        android:enabled="true"
        android:icon="@drawable/invest"
        android:title="@string/invest"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/action_learn"
        android:enabled="true"
        android:icon="@drawable/learn"
        android:title="@string/learn"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/action_account"
        android:enabled="true"
        android:icon="@drawable/accounts"
        android:title="@string/account"
        app:showAsAction="always|withText" />
</menu>