<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.tarrakki.module.portfolio.PortfolioDetailsVM" />


    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
       >

        <androidx.core.widget.NestedScrollView
            android:paddingBottom="@dimen/_20sdp"
            android:paddingTop="@dimen/default_space"
            android:paddingStart="@dimen/default_space"
            android:paddingEnd="@dimen/default_space"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/viewBottom"
            android:layout_width="match_parent"
            android:overScrollMode="never"
            android:layout_height="0dp" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:background="@color/white"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/tvStepsCAS"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/steps_to_get_cas"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:id="@+id/ivVisitCAMS"
                    app:layout_constraintTop_toBottomOf="@+id/tvStepsCAS"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:src="@drawable/ic_visit_cams"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvVisitCAMS"
                    app:layout_constraintTop_toTopOf="@+id/ivVisitCAMS"
                    app:layout_constraintBottom_toBottomOf="@+id/ivVisitCAMS"
                    app:layout_constraintStart_toEndOf="@+id/ivVisitCAMS"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:text="@string/visit_cams_websites"
                    android:fontFamily="@font/poppins"
                    android:textStyle="italic"
                    android:textSize="@dimen/_11ssp"
                    android:textColor="@color/equity_fund_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>




                <TextView
                    android:id="@+id/tvEnterDetails"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvVisitCAMS"
                    app:layout_constraintStart_toStartOf="@+id/tvVisitCAMS"
                    android:text="@string/enter_details"
                    android:fontFamily="@font/poppins"
                    android:textSize="@dimen/_11ssp"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:textColor="@color/black"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>


                <View
                    android:background="@drawable/vertical_dotted_line"
                    app:layout_constraintStart_toStartOf="@+id/ivEnterDetails"
                    app:layout_constraintEnd_toEndOf="@+id/ivEnterDetails"
                    app:layout_constraintTop_toBottomOf="@+id/ivVisitCAMS"
                    app:layout_constraintBottom_toTopOf="@+id/ivEnterDetails"
                    android:layout_width="1dp"
                    android:layout_height="0dp"/>

                <ImageView
                    android:id="@+id/ivEnterDetails"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tvEnterDetails"
                    app:layout_constraintBottom_toBottomOf="@+id/tvEnterDetails"
                    android:src="@drawable/ic_enter_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvStatementType"
                    app:layout_constraintTop_toBottomOf="@+id/tvEnterDetails"
                    app:layout_constraintStart_toStartOf="@+id/tvEnterDetails"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/statement_type"
                    android:fontFamily="@font/poppins"
                    android:textSize="@dimen/_11ssp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvDetailed"
                    app:layout_constraintTop_toTopOf="@+id/tvStatementType"
                    app:layout_constraintStart_toEndOf="@+id/tvStatementType"
                    android:text="@string/detailed"
                    android:fontFamily="@font/poppins"
                    android:textSize="@dimen/_11ssp"
                    android:textColor="@color/black"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvStatementPeriod"
                    app:layout_constraintTop_toBottomOf="@+id/tvStatementType"
                    app:layout_constraintStart_toStartOf="@+id/tvEnterDetails"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:text="@string/period"
                    android:fontFamily="@font/poppins"
                    android:textSize="@dimen/_11ssp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvSpecificPeriod"
                    app:layout_constraintTop_toTopOf="@+id/tvStatementPeriod"
                    app:layout_constraintStart_toStartOf="@+id/tvDetailed"
                    android:text="@string/specific_period"
                    android:fontFamily="@font/poppins"
                    android:textSize="@dimen/_11ssp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvFromDate"
                    app:layout_constraintTop_toBottomOf="@+id/tvStatementPeriod"
                    app:layout_constraintStart_toStartOf="@+id/tvEnterDetails"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:text="@string/from_date"
                    android:fontFamily="@font/poppins"
                    android:textSize="@dimen/_11ssp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvDate"
                    app:layout_constraintTop_toTopOf="@+id/tvFromDate"
                    app:layout_constraintStart_toStartOf="@+id/tvDetailed"
                    android:text="@string/first_jan"
                    android:fontFamily="@font/poppins"
                    android:textSize="@dimen/_11ssp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                <TextView
                    android:id="@+id/tvToDate"
                    app:layout_constraintTop_toBottomOf="@+id/tvFromDate"
                    app:layout_constraintStart_toStartOf="@+id/tvEnterDetails"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:text="@string/to_date"
                    android:fontFamily="@font/poppins"
                    android:textSize="@dimen/_11ssp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                <TextView
                    android:id="@+id/tvCurrentDate"
                    app:layout_constraintTop_toTopOf="@+id/tvToDate"
                    app:layout_constraintStart_toStartOf="@+id/tvDetailed"
                    android:text="@string/current_date"
                    android:fontFamily="@font/poppins"
                    android:textSize="@dimen/_11ssp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvFolioListing"
                    app:layout_constraintTop_toBottomOf="@+id/tvToDate"
                    app:layout_constraintStart_toStartOf="@+id/tvEnterDetails"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:text="@string/folio_listing"
                    android:fontFamily="@font/poppins"
                    android:textSize="@dimen/_11ssp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvZeroFolio"
                    app:layout_constraintTop_toTopOf="@+id/tvFolioListing"
                    app:layout_constraintStart_toStartOf="@+id/tvDetailed"
                    android:text="@string/with_zero_balance"
                    android:fontFamily="@font/poppins"
                    android:textSize="@dimen/_11ssp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvLabelEmail"
                    app:layout_constraintTop_toBottomOf="@+id/tvFolioListing"
                    app:layout_constraintStart_toStartOf="@+id/tvEnterDetails"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:text="@string/email"
                    android:fontFamily="@font/poppins"
                    android:textSize="@dimen/_11ssp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvEmail"
                    app:layout_constraintTop_toTopOf="@+id/tvLabelEmail"
                    app:layout_constraintStart_toStartOf="@+id/tvDetailed"
                    android:text="mytestemail"
                    android:fontFamily="@font/poppins"
                    android:textSize="@dimen/_11ssp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvLabelPan"
                    app:layout_constraintTop_toBottomOf="@+id/tvEmail"
                    app:layout_constraintStart_toStartOf="@+id/tvEnterDetails"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:text="@string/pan"
                    android:fontFamily="@font/poppins"
                    android:textSize="@dimen/_11ssp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvPan"
                    app:layout_constraintTop_toTopOf="@+id/tvLabelPan"
                    app:layout_constraintStart_toStartOf="@+id/tvDetailed"
                    android:text="ABCDFHKIK"
                    android:fontFamily="@font/poppins"
                    android:textSize="@dimen/_11ssp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvLabelPassword"
                    app:layout_constraintTop_toBottomOf="@+id/tvLabelPan"
                    app:layout_constraintStart_toStartOf="@+id/tvEnterDetails"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:text="@string/passwords"
                    android:fontFamily="@font/poppins"
                    android:textSize="@dimen/_11ssp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvPassword"
                    app:layout_constraintTop_toTopOf="@+id/tvLabelPassword"
                    app:layout_constraintStart_toStartOf="@+id/tvDetailed"
                    android:text="ABCDFHKIK"
                    android:fontFamily="@font/poppins"
                    android:textSize="@dimen/_11ssp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                 <TextView
                     android:id="@+id/tvOnceGetEmail"
                     app:layout_constraintTop_toBottomOf="@+id/tvPassword"
                     android:layout_width="0dp"
                     app:layout_constraintStart_toStartOf="@+id/tvEnterDetails"
                     android:layout_marginTop="@dimen/_20sdp"
                     android:fontFamily="@font/poppins"
                     android:textSize="@dimen/_11ssp"
                     android:textColor="@color/black"
                     android:text="@string/once_you_get_email"
                     android:layout_height="wrap_content"/>

                <View
                    android:background="@drawable/vertical_dotted_line"
                    app:layout_constraintStart_toStartOf="@+id/ivEnterDetails"
                    app:layout_constraintEnd_toEndOf="@+id/ivEnterDetails"
                    app:layout_constraintTop_toBottomOf="@+id/ivEnterDetails"
                    app:layout_constraintBottom_toTopOf="@+id/ivForwardEmail"
                    android:layout_width="1dp"
                    android:layout_height="0dp"/>

                <ImageView
                    android:id="@+id/ivForwardEmail"
                    android:src="@drawable/ic_email_forward"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="@+id/tvOnceGetEmail"
                    app:layout_constraintTop_toTopOf="@+id/tvOnceGetEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:paddingBottom="@dimen/_10sdp"
                    android:id="@+id/tvForwardEmail"
                    app:layout_constraintTop_toBottomOf="@+id/tvOnceGetEmail"
                    android:layout_width="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/tvEnterDetails"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/poppins"
                    android:textSize="@dimen/_11ssp"
                    android:drawablePadding="@dimen/_4sdp"
                    android:textColor="@color/black"
                    android:drawableEnd="@drawable/ic_copy_purple"
                    android:text="@string/forward_email_to"
                    android:layout_height="wrap_content"/>












            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.core.widget.NestedScrollView>

        <View
            android:layout_marginStart="@dimen/default_space"
            android:layout_marginEnd="@dimen/default_space"
            android:id="@+id/viewBottom"
            app:layout_constraintBottom_toTopOf="@+id/tvStepCAS"
            android:layout_marginBottom="@dimen/_8sdp"
            android:background="@color/auto_cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"/>

        <TextView
            android:layout_marginStart="@dimen/default_space"
            android:id="@+id/tvStepCAS"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/view_detailed_steps"
            android:textSize="@dimen/_11ssp"
            android:fontFamily="@font/poppins"
            android:textStyle="italic"
            android:layout_marginBottom="@dimen/_20sdp"
            android:textColor="@color/equity_fund_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>